Labs/Kubernetes/27 Network Policies/files/k8s/2_srv_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: srv-network-policy
  namespace: srv
spec:
  podSelector:
    matchLabels:
      id: srv
  policyTypes:
  - Ingress
