Labs/Kubernetes/27 Network Policies/files/k8s/4_app_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-network-policy
  namespace: srv
spec:
  podSelector:
    matchLabels:
      id: app
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          id: srv
  - to:
    ports:
    - protocol: UDP
      port: 53
